Enhance README with clearer instructions and examples
Co-authored-by: omselkara <73960917+omselkara@users.noreply.github.com>